<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/bg_city"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_size_20"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="@dimen/text_size_20"
                    android:background="@color/browser_actions_bg_grey"
                    android:orientation="vertical"
                    app:cardCornerRadius="@dimen/text_size_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvShowInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:text="@string/chon"
                        android:textSize="@dimen/text_size_20"
                        android:textStyle="italic"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:visibility="invisible"
                        android:id="@+id/llInfoCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin10"
                                android:layout_marginLeft="@dimen/margin10"
                                android:layout_marginTop="@dimen/margin10"
                                android:padding="@dimen/margin5"
                                android:text="@string/city" />

                            <TextView
                                android:id="@+id/tvCity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin10"
                                android:layout_marginLeft="@dimen/margin10"
                                android:layout_marginTop="@dimen/margin10"
                                android:padding="@dimen/margin5" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:orientation="vertical">


                                    <ImageView
                                        android:id="@+id/imgEmotionCity"
                                        android:layout_width="@dimen/size_48"
                                        android:layout_height="@dimen/size_48" />

                                </LinearLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="vertical">

                                <LinearLayout

                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <androidx.constraintlayout.widget.ConstraintLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">

                                        <TextView
                                            android:id="@+id/tvThoiTietCity"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/thoitiet"
                                            app:layout_constraintBottom_toBottomOf="parent"
                                            app:layout_constraintLeft_toLeftOf="parent"
                                            app:layout_constraintTop_toTopOf="parent" />

                                        <ImageView
                                            android:id="@+id/imgThoiTietHCM"
                                            android:layout_width="@dimen/size_icon"
                                            android:layout_height="@dimen/size_icon"
                                            android:layout_marginLeft="@dimen/margin5"
                                            android:src="@drawable/ic_sun"
                                            app:layout_constraintBottom_toBottomOf="parent"
                                            app:layout_constraintLeft_toRightOf="@id/tvThoiTietCity"
                                            app:layout_constraintTop_toTopOf="parent" />

                                        <TextView
                                            android:id="@+id/tvNhietDoCityHCM"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginRight="@dimen/margin5"
                                            android:text="@string/nhietdoCity"
                                            app:layout_constraintBottom_toBottomOf="parent"
                                            app:layout_constraintRight_toLeftOf="@id/tvNhietDoCity"
                                            app:layout_constraintTop_toTopOf="parent" />

                                        <TextView
                                            android:id="@+id/tvNhietDoCity"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginRight="@dimen/margin5"
                                            app:layout_constraintBottom_toBottomOf="parent"
                                            app:layout_constraintRight_toLeftOf="@id/doCHCM"
                                            app:layout_constraintTop_toTopOf="parent" />

                                        <TextView
                                            android:id="@+id/doCHCM"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginEnd="@dimen/margin10"
                                            android:layout_marginRight="@dimen/margin10"
                                            android:text="@string/nhietdo"
                                            app:layout_constraintBottom_toBottomOf="parent"
                                            app:layout_constraintRight_toRightOf="parent"
                                            app:layout_constraintTop_toTopOf="parent" />
                                    </androidx.constraintlayout.widget.ConstraintLayout>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/margin10"
                                        android:text="@string/mucdoonhiem"
                                        android:textSize="@dimen/text_size_16" />

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/tvAQICity"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center_horizontal"
                                            android:textSize="@dimen/text_size_20" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center_horizontal"
                                            android:text="@string/AQI"
                                            android:textSize="@dimen/text_size_16" />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>


                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin10" />
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>